<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center|top"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/thumbnailid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_weight=".7"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/datetimeid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="Date/Time"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/captionid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:inputType="textPersonName"
        android:text="Caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight=".3"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:onClick="click_prev"
            android:text="◀ prev"
            app:backgroundTint="#609ACA" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/snapid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:onClick="click_snap"
            android:text="Snap"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/nextid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="click_next"
            android:text="next ▶"
            app:backgroundTint="#609ACA" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:onClick="filter"
            android:text="Search"
            app:backgroundTint="#609ACA" />

        <Button
            android:id="@+id/shareid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Share" />

        <Button
            android:id="@+id/faceid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Find Face" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="delete"
            android:text="Delete"
            app:backgroundTint="#609ACA" />

    </LinearLayout>

</LinearLayout>